--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:20-alpine
+# Build stage
+FROM node:20-alpine as builder
 
 # Install pnpm
 RUN corepack enable pnpm
@@ -15,8 +16,26 @@ RUN pnpm install --frozen-lockfile
 # Copy application code
 COPY . .
 
-# Expose port
-EXPOSE 5173
+# Build the application
+ARG VITE_API_URL=/api/v1
+ENV VITE_API_URL=${VITE_API_URL}
+RUN pnpm run build
 
-# Run the application
-CMD ["pnpm", "run", "dev", "--host", "0.0.0.0"]
+# Production stage
+FROM nginx:alpine
+
+# Copy custom nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy built application from builder stage
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Expose port
+EXPOSE 80
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s \
+    CMD wget --no-verbose --tries=1 --spider http://localhost/health || exit 1
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
