--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:16
@@ -17,7 +15,7 @@ services:
       retries: 5
 
   backend:
-    image: ghcr.io/${GITHUB_USER}/meal-planner-backend:latest
+    image: ghcr.io/hubertdeng123/meal-planner-backend:latest
     restart: always
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-meal_planner}
@@ -40,7 +38,7 @@ services:
       retries: 3
 
   frontend:
-    image: ghcr.io/${GITHUB_USER}/meal-planner-frontend:latest
+    image: ghcr.io/hubertdeng123/meal-planner-frontend:latest
     restart: always
     depends_on:
       - backend
