fix: correct frontend API URL configuration to prevent double /api/v1 prefix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,6 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:${{ github.sha }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:latest
         build-args: |
-          VITE_API_URL=/api/v1
+          VITE_API_URL=
         cache-from: type=gha
         cache-to: type=gha,mode=max
