optimize: significantly reduce backend Docker image size
- Multi-stage build to separate build/runtime dependencies
- Clean up unnecessary files (tests, bytecode, cache)
- Remove redundant dependencies (bcrypt, schedule, psycopg2-binary)
- Optimize .dockerignore to exclude more files
- Add Python optimization env vars
- Use non-root user for security
- Single platform build for efficiency

Expected size reduction: ~50-70% (from 3GB to ~1-1.5GB)

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -31,27 +31,70 @@ env/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
+.Trash-*
 
 # Git
 .git/
 .gitignore
+.gitattributes
 
 # Environment files
 .env
-.env.local
-.env.production
+.env.*
 
 # Testing
 .pytest_cache/
 .coverage
 htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+.hypothesis/
 
-# Alembic
-alembic.ini
+# Documentation
+docs/
+*.md
+README*
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
 # Logs
 *.log
+logs/
+
+# Cache directories
+.cache/
+.mypy_cache/
+.ruff_cache/
+.black_cache/
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+*.ipynb
+
+# Machine Learning
+models/
+*.pkl
+*.joblib
+*.model
+
+# Temporary files
+*.tmp
+*.temp
+/tmp/
+temp/
+
+# Development tools
+.pre-commit-config.yaml
+.editorconfig
+Makefile
+docker-compose*.yml
