--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,15 @@
-FROM python:3.11-slim
+# Multi-stage build to reduce final image size
+FROM python:3.11-slim as builder
 
-# Install system dependencies
+# Install system dependencies needed for building
 RUN apt-get update && apt-get install -y \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+    build-essential \
+    git \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
-# Install uv
-RUN pip install uv
+# Install uv with no cache
+RUN pip install --no-cache-dir uv
 
 # Set working directory
 WORKDIR /app
@@ -14,14 +17,58 @@ WORKDIR /app
 # Copy dependency files
 COPY pyproject.toml ./
 
-# Install dependencies
-RUN uv venv && uv sync --no-dev
+# Create virtual environment and install dependencies with optimizations
+RUN uv venv --python 3.11 \
+    && uv sync --no-dev --no-cache
+
+# Production stage
+FROM python:3.11-slim as production
+
+# Install only essential runtime dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean \
+    && rm -rf /tmp/* /var/tmp/*
+
+# Create non-root user for security
+RUN groupadd -r appuser && useradd -r -g appuser -s /bin/false appuser
+
+# Set working directory
+WORKDIR /app
+
+# Copy virtual environment from builder stage
+COPY --from=builder /app/.venv /app/.venv
 
 # Copy application code
 COPY . .
 
+# Clean up any unnecessary files
+RUN find /app -type f -name "*.pyc" -delete \
+    && find /app -type d -name "__pycache__" -exec rm -rf {} + 2>/dev/null || true \
+    && rm -rf .git .pytest_cache .ruff_cache \
+    && rm -rf /app/.venv/lib/python3.11/site-packages/torch/test \
+    && rm -rf /app/.venv/lib/python3.11/site-packages/sentence_transformers/tests \
+    && find /app/.venv -name "*.dist-info" -exec rm -rf {} + 2>/dev/null || true
+
+# Change ownership to non-root user
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
+# Add venv to PATH
+ENV PATH="/app/.venv/bin:$PATH" \
+    PYTHONPATH="/app" \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
 # Expose port
 EXPOSE 8000
 
-# Run the application with production settings
-CMD ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Run the application
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
