fix: resolve Docker build and migration issues
- Include alembic.ini and alembic/ directory in Docker image
- Copy only necessary files (app/, alembic.ini, alembic/) to reduce build context
- Add bcrypt dependency back to fix passlib warnings
- Update alembic env.py to import all models for proper migration generation
- Ensure migration files are available in production container

This resolves:
- Missing alembic.ini file in container
- Empty migration files (models not imported)
- Bcrypt warnings in logs
- Database table creation issues

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -40,13 +40,16 @@ WORKDIR /app
 # Copy virtual environment from builder stage
 COPY --from=builder /app/.venv /app/.venv
 
+# Copy alembic configuration and directory structure
+COPY alembic.ini ./
+COPY alembic/ ./alembic/
+
 # Copy application code
-COPY . .
+COPY app/ ./app/
 
 # Clean up any unnecessary files
 RUN find /app -type f -name "*.pyc" -delete \
     && find /app -type d -name "__pycache__" -exec rm -rf {} + 2>/dev/null || true \
-    && rm -rf .git .pytest_cache .ruff_cache \
     && rm -rf /app/.venv/lib/python3.11/site-packages/torch/test \
     && rm -rf /app/.venv/lib/python3.11/site-packages/sentence_transformers/tests \
     && find /app/.venv -name "*.dist-info" -exec rm -rf {} + 2>/dev/null || true
