--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.8.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
+    "bcrypt>=4.0.1",
     "python-multipart>=0.0.12",
     "anthropic>=0.47.0",
     "aiofiles>=23.2.1",
