Revert "optimize: significantly reduce backend Docker image size"
This reverts commit 5fef4d7ecd69aae0f0febaea9a7608837e9e99a7.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,8 +23,10 @@ dependencies = [
     "numpy>=1.24.0",
     "httpx>=0.28.0",
     "beautifulsoup4>=4.12.3",
+    "schedule>=1.2.2",
     "apscheduler>=3.10.4",
     "pytz>=2024.1",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [tool.uv]
