--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:16
+    image: pgvector/pgvector:pg16
     restart: always
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-meal_planner}
