--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,6 +28,8 @@ services:
       SMTP_USE_TLS: ${SMTP_USE_TLS:-true}
       FROM_EMAIL: ${FROM_EMAIL:-noreply@mealassistant.com}
       FROM_NAME: ${FROM_NAME:-Meal Assistant}
+      SENTRY_DSN: ${SENTRY_DSN}
+      ENVIRONMENT: production
     depends_on:
       db:
         condition: service_healthy
