--- a/env.production.example
+++ b/env.production.example
@@ -20,3 +20,6 @@ FROM_NAME=Meal Assistant
 
 # Cloudflare Tunnel
 CLOUDFLARE_TUNNEL_TOKEN=your-cloudflare-tunnel-token
+
+# Error Tracking (optional)
+SENTRY_DSN=your-sentry-dsn-here
