--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "apscheduler>=3.10.4",
     "pytz>=2024.1",
     "psycopg2-binary>=2.9.10",
+    "sentry-sdk[fastapi]>=2.0.0",
 ]
 
 [tool.uv]
