--- a/env.example
+++ b/env.example
@@ -33,3 +33,6 @@ APP_NAME=Meal Assistant
 APP_VERSION=1.0.0
 API_PREFIX=/api/v1
 BASE_URL=http://localhost:3000
+
+# Error Tracking (optional)
+SENTRY_DSN=your-sentry-dsn-here
