--- a/env.example
+++ b/env.example
@@ -26,10 +26,10 @@ SMTP_USERNAME=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
 SMTP_USE_TLS=true
 FROM_EMAIL=noreply@mealassistant.com
-FROM_NAME=Meal Assistant
+FROM_NAME=Hungry Helper
 
 # Application Settings
-APP_NAME=Meal Assistant
+APP_NAME=Hungry Helper
 APP_VERSION=1.0.0
 API_PREFIX=/api/v1
 BASE_URL=http://localhost:3000
