--- a/env.production.example
+++ b/env.production.example
@@ -16,7 +16,7 @@ SMTP_PORT=587
 SMTP_USERNAME=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
 FROM_EMAIL=noreply@yourdomain.com
-FROM_NAME=Meal Assistant
+FROM_NAME=Hungry Helper
 
 # Cloudflare Tunnel
 CLOUDFLARE_TUNNEL_TOKEN=your-cloudflare-tunnel-token
