--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ===========================================
-# AI-Powered Meal Planner - .gitignore
+# Hungry Helper - .gitignore
 # ===========================================
 
 # ===========================================
