--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,28 +19,46 @@ jobs:
       uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b # v4.0.3
       with:
         node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+
+    - name: Setup pnpm
+      uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
+      with:
+        version: 8
+        run_install: false
+
+    - name: Get pnpm store directory
+      working-directory: ./frontend
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - name: Setup pnpm cache
+      uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
 
     - name: Install dependencies
       working-directory: ./frontend
-      run: npm ci
+      run: pnpm install --frozen-lockfile
 
     - name: Run linting
       working-directory: ./frontend
-      run: npm run lint
+      run: pnpm run lint
 
     - name: Run type checking
       working-directory: ./frontend
-      run: npm run typecheck
+      run: pnpm run typecheck
 
     - name: Run tests
       working-directory: ./frontend
-      run: npm run test
+      run: pnpm run test
 
     - name: Run build
       working-directory: ./frontend
-      run: npm run build
+      run: pnpm run build
 
   test-backend:
     name: Backend Tests
@@ -65,12 +83,7 @@ jobs:
       run: uv sync
 
     - name: Start database with Docker Compose
-      run: docker-compose up -d db
-
-    - name: Wait for database to be ready
-      run: |
-        timeout 60 bash -c 'until docker-compose exec -T db pg_isready -U postgres; do sleep 2; done'
-
+      run: docker compose wait -d db
     - name: Run linting
       working-directory: ./backend
       run: uv run ruff check .
@@ -85,4 +98,4 @@ jobs:
 
     - name: Stop Docker Compose services
       if: always()
-      run: docker-compose down
+      run: docker compose down
