--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -13,6 +13,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    ports:
+      - 127.0.0.1:5432:5432
 
   backend:
     image: ghcr.io/hubertdeng123/meal-planner-backend:latest
