--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,15 +14,13 @@ dependencies = [
     "pydantic-settings>=2.8.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
-    "bcrypt>=4.0.1",
+    "bcrypt>=4.0.1,<4.2.0",
     "python-multipart>=0.0.12",
     "anthropic>=0.47.0",
     "aiofiles>=23.2.1",
-    "pgvector>=0.2.4",
-    "sentence-transformers>=2.3.1",
-    "numpy>=1.24.0",
     "httpx>=0.28.0",
     "beautifulsoup4>=4.12.3",
+    "jinja2>=3.1.0",
     "schedule>=1.2.2",
     "apscheduler>=3.10.4",
     "pytz>=2024.1",
