--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "sentry-sdk[fastapi]>=2.0.0",
     "together>=2.0.0a11",
+    "braintrust>=0.5.0",
+    "opentelemetry-sdk>=1.39.1",
 ]
 
 [tool.uv]
