--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,7 +93,7 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:${{ github.sha }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:latest
         build-args: |
-          VITE_API_URL=https://mealassistant.hubertdeng.com
+          VITE_API_URL=https://hungry-helper.com
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64
