--- a/env.example
+++ b/env.example
@@ -25,7 +25,7 @@ SMTP_PORT=587
 SMTP_USERNAME=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
 SMTP_USE_TLS=true
-FROM_EMAIL=noreply@mealassistant.com
+FROM_EMAIL=noreply@hungry-helper.com
 FROM_NAME=Hungry Helper
 
 # Application Settings
