--- a/env.example
+++ b/env.example
@@ -1,12 +1,24 @@
 # Backend Configuration
 DATABASE_URL=postgresql://user:password@localhost/meal_planner
+# LLM Provider Configuration
+# LLM_PROVIDER options: auto | grok | together
+# In auto mode, Grok is preferred when GROK_API_KEY is present.
+LLM_PROVIDER=auto
+GROK_API_KEY=your-grok-api-key-here
+GROK_MODEL=grok-4-1-fast-reasoning
+GROK_BASE_URL=https://api.x.ai/v1
 TOGETHER_API_KEY=your-together-api-key-here
+TOGETHER_MODEL=moonshotai/Kimi-K2.5
+TOGETHER_BASE_URL=https://api.together.xyz/v1
 JWT_SECRET_KEY=your-super-secret-jwt-key-here
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION_HOURS=24
+RECIPE_MAX_TOKENS=8192
+RECIPE_STREAM_MAX_ATTEMPTS=1
 
 # Frontend Configuration
 VITE_API_URL=http://localhost:8000
+VITE_RECIPE_GENERATION_TIMEOUT_MS=240000
 
 # Development Settings
 NODE_ENV=development
